# pixels

./: .gitignore  CLAUDE.md  README.md  build.bat  generate_license_key.py  installer.iss  package-lock.json  package.json  reset_license.py  sprite_toolkit.spec  terminal-cmds.txt  test_current_algorithm.py
.github/workflows/: build.yml
core/: license_manager.py  pixel_downscaler.py  project_manager.py  settings_manager.py  sprite_packer.py  workers.py
downscale_tests/: analyze_images.py  debug_bg_mask.py  debug_content_edges.py  full_pipeline_greenhouse.py  trace_python_greenhouse.py
downscale_tests/archive/: compare_background_removal.py  debug_bg_detection.py  debug_grindstone_combined.py  debug_grindstone_scores.py  debug_python_scores.py  full_pipeline_with_finetune.py  trace_python_grindstone.py
downscale_tests/scripts/: block_uniformity.py  test_runner.py
gui/: license_dialog.py  main_window.py  pack_tab.py  process_tab.py
gui/widgets/: image_list_widget.py
legacy/: webpage.html
legacy/pyapp-1.3/: main.py  requirements.txt
legacy/pyapp-1.3/core/: image_processor.py
legacy/pyapp-1.3/gui/: downscale_tab.py  main_window.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  downscaler.rs  error.rs  lib.rs  packer.rs  processor.rs  state.rs
src/components/v2/: ImageEditor.tsx  OneOffPanel.tsx  PreviewPanel.tsx  ProcessPanel.tsx  SourcesPanel.tsx  Workspace.css  Workspace.tsx  WorkspaceV3.tsx  index.ts  types.ts  useWorkspace.ts
(+1 files in other folders)
